--- a/siteY/styles.css
+++ b/siteY/styles.css
@@ -14,6 +14,11 @@ header {
     z-index: 10;
 }
 
+scroll-container {
+            height: 400px; /* Set the desired height for the scrollable area */
+            overflow-y: scroll;
+        }
+
 h1 {
     font-size: 48px;
     margin: 0;
