--- a/Bluebook/styles.css
+++ b/Bluebook/styles.css
@@ -121,3 +121,35 @@ a:hover {
     border-color: rgb(255,255,255);
     animation: rotate1 2s linear infinity;
 }
+
+.container {
+  text-align: center;
+}
+
+.running-text {
+  font-weight: bold;
+  font-size: 24px;
+  animation: running-animation 1s infinite;
+}
+
+@keyframes running-animation {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.running-script {
+  opacity: 0;
+  animation: script-animation 1s infinite steps(5);
+}
+
+@keyframes script-animation {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
